artifacts/infrastructure/cluster-network-configs/gateway_ingress-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - zaap.nandi.sh
        - immich.nandi.sh
      port:
        name: http
        number: 80
        protocol: HTTP
