artifacts/infrastructure/cluster-network-configs/virtualservice_argocd-server.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - zaap.nandi.sh
  http:
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
