artifacts/infrastructure/cluster-network-configs/virtualservice_grafana.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - zaap.nandi.sh
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
