artifacts/infrastructure/cluster-network-configs/virtualservice_longhorn.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - zaap.nandi.sh
  http:
    - match:
        - uri:
            exact: /longhorn
      redirect:
        redirectCode: 301
        uri: /longhorn/
    - match:
        - uri:
            prefix: /longhorn/
      rewrite:
        uri: /
      route:
        - destination:
            host: longhorn-frontend.longhorn.svc.cluster.local
            port:
              number: 80
